syntax = "proto2";

package pb;

// ========== Settings ==========

// The top-level settings proto included in GameSettings.
// Immutable over the duration of a single game.

message HeatSettings {
  optional int32 init = 1;
  optional int32 min = 2 [default=0];
  optional int32 mxm = 3 [default=100];  // Maximum.
  optional int32 decay = 4;
}

// ========== State ==========

// The top-level state proto included in GameState.
// Mutated each turn based on moves.

message HeatState {
  optional int32 heat = 1;
}
